[metadata]
name = trulens_eval
version = attr: trulens_eval.__version__
url = https://www.trulens.org
license = MIT
author = Truera Inc
author_email = all@truera.com
description = Library to systematically track and evaluate LLM based applications.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
