[tool.poetry]
name = "trulens-monorepo"
version = "0.33.0"
description = "Library to systematically track and evaluate LLM based applications."
authors = ["Truera Inc <all@truera.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"

[tool.poetry.group.dev.dependencies]
trulens-core = { path = "src/core" }
trulens-external = { path = "src/external" }
trulens-dashboard = { path = "src/dashboard" }
trulens-langchain = { path = "src/langchain" }
trulens-llamaindex = { path = "src/llamaindex" }
yapf = "^0.40.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"
toml = "^0.10.2"

[tool.poetry.group.tests.dependencies]
pytest = "^8.3.1"
nbconvert = "^7.16.4"
nbformat = "^5.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "google"

[tool.yapf]
based_on_style = "google"
dedent_closing_brackets = true
split_before_first_argument = true
split_complex_comprehension = true
column_limit = 80
