[metadata]
name = trulens
version = attr: trulens.__version__
url = https://www.trulens.org
license = MIT
author = Truera Inc
author_email = all@truera.com
description = Library containing attribution and interpretation methods for deep nets.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
