[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
name = "trulens-api"
version = "1.0.0"
description = "Library to systematically track and evaluate LLM based applications."
authors = [
  "Truera Inc <all@truera.com>",
]
license = "MIT"
readme = "README.md"
packages = [
  { include = "trulens" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.9"
typing_extensions = "^4.9.0"
