[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
name = "trulens-core"
version = "2.1.0"
description = "Library to systematically track and evaluate LLM based applications."
authors = [
  "Snowflake Inc. <ml-observability-wg-dl@snowflake.com>",
]
license = "MIT"
readme = "README.md"
packages = [
  { include = "trulens" },
]
homepage = "https://trulens.org/"
documentation = "https://trulens.org/getting_started/"
repository = "https://github.com/truera/trulens"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.9"
trulens-otel-semconv = { version = "^2.0.0" }
opentelemetry-api = ">=1.23.0"
opentelemetry-sdk = ">=1.23.0"
opentelemetry-proto = ">=1.23.0"
numpy = ">=1.23.0"
munch = "^2.5.0"
dill = "^0.3.8"
typing_extensions = "^4.9"
pydantic = "^2.4.2"
pandas = ">=1.0.0"
rich = "^13.6.0"
sqlalchemy = "^2.0"
alembic = "^1.8.1"
nest-asyncio = "^1.5"
python-dotenv = ">=0.21,<2.0"
requests = "^2.31"
packaging = ">=23.0"
importlib-resources = "^6.0"
wrapt = ">=1.17.0"

[tool.poetry.group.tqdm]
optional = true

[tool.poetry.group.tqdm.dependencies]
tqdm = { version = ">=4.2.0", optional = true }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
trulens-otel-semconv = { path = "../otel/semconv" }
