[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
name = "trulens-dashboard"
version = "1.3.0"
description = "Library to systematically track and evaluate LLM based applications."
authors = [
  "Snowflake Inc. <ml-observability-wg-dl@snowflake.com>",
]
license = "MIT"
readme = "README.md"
packages = [
  { include = "trulens" },
]
homepage = "https://trulens.org/"
documentation = "https://trulens.org/getting_started/"
repository = "https://github.com/truera/trulens"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.8.1,!=3.9.7"
poetry-core = "<2.0.0"
trulens-core = { version = "^1.0.0" }
ipywidgets = ">=7.1.2"
jupyter = "^1"
pandas = ">=1.0.0"
psutil = "^5.9"
rich = "^13.6"
packaging = ">=23.0"
plotly = "^5.22.0"
streamlit = "^1.35"
traitlets = "^5.0.5"

streamlit-aggrid = { version = "^1.0.5", optional = true }

[tool.poetry.extras]
full = [
  "streamlit-aggrid",
]

[tool.poetry.group.dev.dependencies]
trulens-core = { path = "../core" }
