[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
name = "trulens-feedback"
version = "1.0.1a4"
description = "A TruLens extension package implementing feedback functions for LLM App evaluation."
authors = [
  "Snowflake Inc. <ml-observability-wg-dl@snowflake.com>",
]
license = "MIT"
readme = "README.md"
packages = [
  { include = "trulens" },
]
homepage = "https://trulens.org/"
documentation = "https://trulens.org/trulens/getting_started/"
repository = "https://github.com/truera/trulens"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.9"
trulens-core = { version = "^1.0.0", allow-prereleases = true }
nltk = "^3.9.1"
pydantic = "^2"
numpy = ">=1.23"
scikit-learn = "^1.3.0"
scipy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
trulens-core = { path = "../core", develop = true }
