[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
name = "trulens-feedback"
version = "2.1.0"
description = "A TruLens extension package implementing feedback functions for LLM App evaluation."
authors = [
  "Snowflake Inc. <ml-observability-wg-dl@snowflake.com>",
]
license = "MIT"
readme = "README.md"
packages = [
  { include = "trulens" },
]
homepage = "https://trulens.org/"
documentation = "https://trulens.org/getting_started/"
repository = "https://github.com/truera/trulens"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.9"
trulens-core = { version = "^2.0.0" }
nltk = "^3.9.1"
pydantic = "^2.4.2"
numpy = ">=1.23.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.1"
requests = "^2.31"

[tool.poetry.group.dev.dependencies]
trulens-core = { path = "../core", develop = true }
