[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
name = "trulens-legacy"
version = "1.0.1a0"
description = "Backwards-compatibility package for trulens_eval ."
authors = [
  "Truera Inc <all@truera.com>",
]
license = "MIT"
readme = "README.md"
packages = [
  { include = "trulens_eval" },
]
homepage = "https://trulens.org/"
documentation = "https://trulens.org/trulens/getting_started/"
repository = "https://github.com/truera/trulens"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.9"
trulens-api = { version = "^1.0.0", allow-prereleases = true }

[tool.poetry.group.dev.dependencies]
trulens-api = { path = "../api", develop = true }
