[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "trulens-utils"
version = "0.33.0"
description = "Library to systematically track and evaluate LLM based applications."
authors = ["Truera Inc <all@truera.com>"]
license = "MIT"
readme = "README.md"
packages = [
  {include = "trulens"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.9"
munch = "^3.0.0"
pydantic = "^2"
merkle-json = "^1.0.0"
nest-asyncio = "^1.5.8"
python-dotenv = "^1.0.0"

[tool.poetry.group.optional]
optional = true

[tool.poetry.group.optional.dependencies]
openai = "^1.37.1"
httpx = "^0.27.0"
